crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__glue[parquet]-federated_tpch_simple_q6_explain.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: tpch_simple_q6"
---
+---------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                                                                                                                                                              |
+---------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | SubqueryAlias: c                                                                                                                                                                                                                                                                                                                                  |
|               |   Projection: orders.o_orderkey + Int64(1) AS key                                                                                                                                                                                                                                                                                                 |
|               |     Limit: skip=0, fetch=10                                                                                                                                                                                                                                                                                                                       |
|               |       BytesProcessedNode                                                                                                                                                                                                                                                                                                                          |
|               |         TableScan: orders projection=[o_orderkey], fetch=10                                                                                                                                                                                                                                                                                       |
| physical_plan | ProjectionExec: expr=[o_orderkey@0 + 1 as key]                                                                                                                                                                                                                                                                                                    |
|               |   RepartitionExec: partitioning=RoundRobinBatch(32), input_partitions=1                                                                                                                                                                                                                                                                           |
|               |     CoalescePartitionsExec: fetch=10                                                                                                                                                                                                                                                                                                              |
|               |       BytesProcessedExec                                                                                                                                                                                                                                                                                                                          |
|               |         DataSourceExec: file_groups={32 groups: [[tpch/orders/orders.parquet:0..1151851], [tpch/orders/orders.parquet:1151851..2303702], [tpch/orders/orders.parquet:2303702..3455553], [tpch/orders/orders.parquet:3455553..4607404], [tpch/orders/orders.parquet:4607404..5759255], ...]}, projection=[o_orderkey], limit=10, file_type=parquet |
|               |                                                                                                                                                                                                                                                                                                                                                   |
+---------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
