crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__http_basic_http_single_object_explain.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: http_single_object"
---
+---------------+---------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                    |
+---------------+---------------------------------------------------------------------------------------------------------+
| logical_plan  | TableScan: httpbin_json projection=[_path, content]                                                     |
| physical_plan | CooperativeExec                                                                                         |
|               |   BytesProcessedExec                                                                                    |
|               |     HttpExec: base_url=https://httpbin.org/json, format=auto, partitions=[(path="", query="", body="")] |
|               |                                                                                                         |
+---------------+---------------------------------------------------------------------------------------------------------+
